--- a/source/_posts/2013-06-07-it-news.markdown
+++ b/source/_posts/2013-06-07-it-news.markdown
@@ -20,6 +20,13 @@ A major version of Software Collections will be released approximately every 18 
 <h2>* Hacker publishes alleged zero-day remote code execution exploit for older Plesk versions</h2>
 <hr>
 <h3><i>The exploit targets a vulnerability that only affects unsupported Plesk versions, the software's creator said</i></h3>
+<p>A hacker released what he claims is a zero-day exploit for older versions of the Parallels Plesk Panel, a popular Web hosting administration software package, that could allow attackers to inject arbitrary PHP code and execute rogue commands on Web servers.<br>
+The hacker uses the alias "Kingcope" and has published exploits for unpatched vulnerabilities before.</p>
+<p>The hacker claims the exploit was successfully tested against Plesk 9.5.4, Plesk 9.3, Plesk 9.2, Plesk 9.0, and Plesk 8.6 used in combination with the Apache Web server software on 32-bit and 64-bit Linux distributions including Red Hat, CentOS, and Fedora. However, Parallels, the Seattle-based company that develops Plesk Panel, claims that Plesk 9.5 and later versions are not affected by the exploit.
+<br>"This vulnerability is a variation of the long known CVE-2012-1823 vulnerability related to the CGI mode of PHP only in older Plesk [versions]," a Parallels representative said Thursday via email. "All currently supported versions of Parallels Plesk Panel 9.5, 10.x and 11.x, as well Parallels Plesk Automation, are not vulnerable."
+<br>
+According to a page on the company's website, version 8 of the product has not been supported since September 2012 and Plesk version 9 will reach end of life Sunday.<br>
+Even if the latest versions of the software are not affected, widespread exploitation of this vulnerability is still likely to happen because servers running the old and affected versions of Plesk are unlikely to be regularly maintained, said Craig Williams, a threat researcher at Cisco, </p>
 </body>
 </html>
 
